[sample] Reorganized MainActivity to allow for various other samples

--- a/confetti-sample/src/main/res/values/strings.xml
+++ b/confetti-sample/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Confetti Sample</string>
+
+    <string name="showering_confetti">Showering confetti</string>
 </resources>
