--- a/confetti-sample/src/main/res/values/strings.xml
+++ b/confetti-sample/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Confetti Sample</string>
+    <string name="generate_confetti_action">Generate confetti!</string>
 
     <string name="showering_confetti">Showering confetti</string>
 </resources>
