--- a/confetti-sample/src/main/res/values/strings.xml
+++ b/confetti-sample/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="falling_confetti_from_top">Falling confetti from top</string>
     <string name="falling_confetti_from_point">Falling confetti from point</string>
+    <string name="explosion_confetti">Explosion</string>
 </resources>
