--- a/confetti-sample/src/main/res/values/strings.xml
+++ b/confetti-sample/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="falling_confetti_from_point">Falling confetti from point</string>
     <string name="explosion_confetti">Explosion</string>
     <string name="shimmering_confetti">Shimmering confetti</string>
+    <string name="ice_flakes_with_touch">Falling ice flakes with touch</string>
 </resources>
