[confetti-sample] Update sample project to include a terminate button

--- a/confetti-sample/src/main/res/values/strings.xml
+++ b/confetti-sample/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="generate_confetti_once">Once</string>
     <string name="generate_confetti_stream">Stream</string>
     <string name="generate_confetti_infinite">Infinite</string>
+    <string name="stop_confetti">Stop</string>
 
     <string name="falling_confetti_from_top">Falling confetti from top</string>
     <string name="falling_confetti_from_point">Falling confetti from point</string>
